parser.out
Grammar:

Rule 0     S' -> block
Rule 1     block -> <empty>
Rule 2     block -> statements
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> while_statement
Rule 6     statement -> if_statement
Rule 7     statement -> assign_statement
Rule 8     statement -> var_declaration
Rule 9     if_statement -> IF ( expr ) { block }
Rule 10    if_statement -> IF ( expr ) { block } ELSE { block }
Rule 11    while_statement -> WHILE expr { block }
Rule 12    var_declaration -> TYPE IDENTIFIER ;
Rule 13    var_declaration -> TYPE IDENTIFIER ASSIGN expr ;
Rule 14    assign_statement -> IDENTIFIER ASSIGN expr ;
Rule 15    expr -> literal
Rule 16    expr -> IDENTIFIER
Rule 17    expr -> ( expr )
Rule 18    expr -> expr OR expr
Rule 19    expr -> expr AND expr
Rule 20    expr -> expr NEQUAL expr  [precedence=nonassoc, level=1]
Rule 21    expr -> expr EQUAL expr  [precedence=nonassoc, level=1]
Rule 22    expr -> expr GEQUAL expr  [precedence=nonassoc, level=1]
Rule 23    expr -> expr GREATERT expr  [precedence=nonassoc, level=1]
Rule 24    expr -> expr LEQUAL expr  [precedence=nonassoc, level=1]
Rule 25    expr -> expr LESST expr  [precedence=nonassoc, level=1]
Rule 26    expr -> expr DIVIDE expr  [precedence=left, level=3]
Rule 27    expr -> expr TIMES expr  [precedence=left, level=3]
Rule 28    expr -> expr MINUS expr  [precedence=left, level=2]
Rule 29    expr -> expr PLUS expr  [precedence=left, level=2]
Rule 30    literal -> BOOLEAN
Rule 31    literal -> STRING
Rule 32    literal -> FLOAT
Rule 33    literal -> INTEGER

Unused terminals:

    FOR
    NOT
    SWITCH
    CASE

Terminals, with rules where they appear:

(                    : 9 10 17
)                    : 9 10 17
;                    : 12 13 14
AND                  : 19
ASSIGN               : 13 14
BOOLEAN              : 30
CASE                 : 
DIVIDE               : 26
ELSE                 : 10
EQUAL                : 21
FLOAT                : 32
FOR                  : 
GEQUAL               : 22
GREATERT             : 23
IDENTIFIER           : 12 13 14 16
IF                   : 9 10
INTEGER              : 33
LEQUAL               : 24
LESST                : 25
MINUS                : 28
NEQUAL               : 20
NOT                  : 
OR                   : 18
PLUS                 : 29
STRING               : 31
SWITCH               : 
TIMES                : 27
TYPE                 : 12 13
WHILE                : 11
error                : 
{                    : 9 10 10 11
}                    : 9 10 10 11

Nonterminals, with rules where they appear:

assign_statement     : 7
block                : 9 10 10 11 0
expr                 : 9 10 11 13 14 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29
if_statement         : 6
literal              : 15
statement            : 3 4
statements           : 2 3
var_declaration      : 8
while_statement      : 5


state 0

    (0) S' -> . block
    (1) block -> .
    (2) block -> . statements
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . while_statement
    (6) statement -> . if_statement
    (7) statement -> . assign_statement
    (8) statement -> . var_declaration
    (11) while_statement -> . WHILE expr { block }
    (9) if_statement -> . IF ( expr ) { block }
    (10) if_statement -> . IF ( expr ) { block } ELSE { block }
    (14) assign_statement -> . IDENTIFIER ASSIGN expr ;
    (12) var_declaration -> . TYPE IDENTIFIER ;
    (13) var_declaration -> . TYPE IDENTIFIER ASSIGN expr ;
    $end            reduce using rule 1 (block -> .)
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    IDENTIFIER      shift and go to state 10
    TYPE            shift and go to state 11

    block                          shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    while_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    assign_statement               shift and go to state 6
    var_declaration                shift and go to state 7

state 1

    (0) S' -> block .


state 2

    (2) block -> statements .
    (3) statements -> statements . statement
    (5) statement -> . while_statement
    (6) statement -> . if_statement
    (7) statement -> . assign_statement
    (8) statement -> . var_declaration
    (11) while_statement -> . WHILE expr { block }
    (9) if_statement -> . IF ( expr ) { block }
    (10) if_statement -> . IF ( expr ) { block } ELSE { block }
    (14) assign_statement -> . IDENTIFIER ASSIGN expr ;
    (12) var_declaration -> . TYPE IDENTIFIER ;
    (13) var_declaration -> . TYPE IDENTIFIER ASSIGN expr ;
    $end            reduce using rule 2 (block -> statements .)
    }               reduce using rule 2 (block -> statements .)
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    IDENTIFIER      shift and go to state 10
    TYPE            shift and go to state 11

    statement                      shift and go to state 12
    while_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    assign_statement               shift and go to state 6
    var_declaration                shift and go to state 7

state 3

    (4) statements -> statement .
    WHILE           reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    IDENTIFIER      reduce using rule 4 (statements -> statement .)
    TYPE            reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    }               reduce using rule 4 (statements -> statement .)


state 4

    (5) statement -> while_statement .
    WHILE           reduce using rule 5 (statement -> while_statement .)
    IF              reduce using rule 5 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> while_statement .)
    TYPE            reduce using rule 5 (statement -> while_statement .)
    $end            reduce using rule 5 (statement -> while_statement .)
    }               reduce using rule 5 (statement -> while_statement .)


state 5

    (6) statement -> if_statement .
    WHILE           reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    TYPE            reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    }               reduce using rule 6 (statement -> if_statement .)


state 6

    (7) statement -> assign_statement .
    WHILE           reduce using rule 7 (statement -> assign_statement .)
    IF              reduce using rule 7 (statement -> assign_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> assign_statement .)
    TYPE            reduce using rule 7 (statement -> assign_statement .)
    $end            reduce using rule 7 (statement -> assign_statement .)
    }               reduce using rule 7 (statement -> assign_statement .)


state 7

    (8) statement -> var_declaration .
    WHILE           reduce using rule 8 (statement -> var_declaration .)
    IF              reduce using rule 8 (statement -> var_declaration .)
    IDENTIFIER      reduce using rule 8 (statement -> var_declaration .)
    TYPE            reduce using rule 8 (statement -> var_declaration .)
    $end            reduce using rule 8 (statement -> var_declaration .)
    }               reduce using rule 8 (statement -> var_declaration .)


state 8

    (11) while_statement -> WHILE . expr { block }
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 13
    literal                        shift and go to state 14

state 9

    (9) if_statement -> IF . ( expr ) { block }
    (10) if_statement -> IF . ( expr ) { block } ELSE { block }
    (               shift and go to state 21


state 10

    (14) assign_statement -> IDENTIFIER . ASSIGN expr ;
    ASSIGN          shift and go to state 22


state 11

    (12) var_declaration -> TYPE . IDENTIFIER ;
    (13) var_declaration -> TYPE . IDENTIFIER ASSIGN expr ;
    IDENTIFIER      shift and go to state 23


state 12

    (3) statements -> statements statement .
    WHILE           reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    IDENTIFIER      reduce using rule 3 (statements -> statements statement .)
    TYPE            reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    }               reduce using rule 3 (statements -> statements statement .)


state 13

    (11) while_statement -> WHILE expr . { block }
    (18) expr -> expr . OR expr
    (19) expr -> expr . AND expr
    (20) expr -> expr . NEQUAL expr
    (21) expr -> expr . EQUAL expr
    (22) expr -> expr . GEQUAL expr
    (23) expr -> expr . GREATERT expr
    (24) expr -> expr . LEQUAL expr
    (25) expr -> expr . LESST expr
    (26) expr -> expr . DIVIDE expr
    (27) expr -> expr . TIMES expr
    (28) expr -> expr . MINUS expr
    (29) expr -> expr . PLUS expr
    {               shift and go to state 24
    OR              shift and go to state 25
    AND             shift and go to state 26
    NEQUAL          shift and go to state 27
    EQUAL           shift and go to state 28
    GEQUAL          shift and go to state 29
    GREATERT        shift and go to state 30
    LEQUAL          shift and go to state 31
    LESST           shift and go to state 32
    DIVIDE          shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    PLUS            shift and go to state 36


state 14

    (15) expr -> literal .
    {               reduce using rule 15 (expr -> literal .)
    OR              reduce using rule 15 (expr -> literal .)
    AND             reduce using rule 15 (expr -> literal .)
    NEQUAL          reduce using rule 15 (expr -> literal .)
    EQUAL           reduce using rule 15 (expr -> literal .)
    GEQUAL          reduce using rule 15 (expr -> literal .)
    GREATERT        reduce using rule 15 (expr -> literal .)
    LEQUAL          reduce using rule 15 (expr -> literal .)
    LESST           reduce using rule 15 (expr -> literal .)
    DIVIDE          reduce using rule 15 (expr -> literal .)
    TIMES           reduce using rule 15 (expr -> literal .)
    MINUS           reduce using rule 15 (expr -> literal .)
    PLUS            reduce using rule 15 (expr -> literal .)
    )               reduce using rule 15 (expr -> literal .)
    ;               reduce using rule 15 (expr -> literal .)


state 15

    (16) expr -> IDENTIFIER .
    {               reduce using rule 16 (expr -> IDENTIFIER .)
    OR              reduce using rule 16 (expr -> IDENTIFIER .)
    AND             reduce using rule 16 (expr -> IDENTIFIER .)
    NEQUAL          reduce using rule 16 (expr -> IDENTIFIER .)
    EQUAL           reduce using rule 16 (expr -> IDENTIFIER .)
    GEQUAL          reduce using rule 16 (expr -> IDENTIFIER .)
    GREATERT        reduce using rule 16 (expr -> IDENTIFIER .)
    LEQUAL          reduce using rule 16 (expr -> IDENTIFIER .)
    LESST           reduce using rule 16 (expr -> IDENTIFIER .)
    DIVIDE          reduce using rule 16 (expr -> IDENTIFIER .)
    TIMES           reduce using rule 16 (expr -> IDENTIFIER .)
    MINUS           reduce using rule 16 (expr -> IDENTIFIER .)
    PLUS            reduce using rule 16 (expr -> IDENTIFIER .)
    )               reduce using rule 16 (expr -> IDENTIFIER .)
    ;               reduce using rule 16 (expr -> IDENTIFIER .)


state 16

    (17) expr -> ( . expr )
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 37
    literal                        shift and go to state 14

state 17

    (30) literal -> BOOLEAN .
    {               reduce using rule 30 (literal -> BOOLEAN .)
    OR              reduce using rule 30 (literal -> BOOLEAN .)
    AND             reduce using rule 30 (literal -> BOOLEAN .)
    NEQUAL          reduce using rule 30 (literal -> BOOLEAN .)
    EQUAL           reduce using rule 30 (literal -> BOOLEAN .)
    GEQUAL          reduce using rule 30 (literal -> BOOLEAN .)
    GREATERT        reduce using rule 30 (literal -> BOOLEAN .)
    LEQUAL          reduce using rule 30 (literal -> BOOLEAN .)
    LESST           reduce using rule 30 (literal -> BOOLEAN .)
    DIVIDE          reduce using rule 30 (literal -> BOOLEAN .)
    TIMES           reduce using rule 30 (literal -> BOOLEAN .)
    MINUS           reduce using rule 30 (literal -> BOOLEAN .)
    PLUS            reduce using rule 30 (literal -> BOOLEAN .)
    )               reduce using rule 30 (literal -> BOOLEAN .)
    ;               reduce using rule 30 (literal -> BOOLEAN .)


state 18

    (31) literal -> STRING .
    {               reduce using rule 31 (literal -> STRING .)
    OR              reduce using rule 31 (literal -> STRING .)
    AND             reduce using rule 31 (literal -> STRING .)
    NEQUAL          reduce using rule 31 (literal -> STRING .)
    EQUAL           reduce using rule 31 (literal -> STRING .)
    GEQUAL          reduce using rule 31 (literal -> STRING .)
    GREATERT        reduce using rule 31 (literal -> STRING .)
    LEQUAL          reduce using rule 31 (literal -> STRING .)
    LESST           reduce using rule 31 (literal -> STRING .)
    DIVIDE          reduce using rule 31 (literal -> STRING .)
    TIMES           reduce using rule 31 (literal -> STRING .)
    MINUS           reduce using rule 31 (literal -> STRING .)
    PLUS            reduce using rule 31 (literal -> STRING .)
    )               reduce using rule 31 (literal -> STRING .)
    ;               reduce using rule 31 (literal -> STRING .)


state 19

    (32) literal -> FLOAT .
    {               reduce using rule 32 (literal -> FLOAT .)
    OR              reduce using rule 32 (literal -> FLOAT .)
    AND             reduce using rule 32 (literal -> FLOAT .)
    NEQUAL          reduce using rule 32 (literal -> FLOAT .)
    EQUAL           reduce using rule 32 (literal -> FLOAT .)
    GEQUAL          reduce using rule 32 (literal -> FLOAT .)
    GREATERT        reduce using rule 32 (literal -> FLOAT .)
    LEQUAL          reduce using rule 32 (literal -> FLOAT .)
    LESST           reduce using rule 32 (literal -> FLOAT .)
    DIVIDE          reduce using rule 32 (literal -> FLOAT .)
    TIMES           reduce using rule 32 (literal -> FLOAT .)
    MINUS           reduce using rule 32 (literal -> FLOAT .)
    PLUS            reduce using rule 32 (literal -> FLOAT .)
    )               reduce using rule 32 (literal -> FLOAT .)
    ;               reduce using rule 32 (literal -> FLOAT .)


state 20

    (33) literal -> INTEGER .
    {               reduce using rule 33 (literal -> INTEGER .)
    OR              reduce using rule 33 (literal -> INTEGER .)
    AND             reduce using rule 33 (literal -> INTEGER .)
    NEQUAL          reduce using rule 33 (literal -> INTEGER .)
    EQUAL           reduce using rule 33 (literal -> INTEGER .)
    GEQUAL          reduce using rule 33 (literal -> INTEGER .)
    GREATERT        reduce using rule 33 (literal -> INTEGER .)
    LEQUAL          reduce using rule 33 (literal -> INTEGER .)
    LESST           reduce using rule 33 (literal -> INTEGER .)
    DIVIDE          reduce using rule 33 (literal -> INTEGER .)
    TIMES           reduce using rule 33 (literal -> INTEGER .)
    MINUS           reduce using rule 33 (literal -> INTEGER .)
    PLUS            reduce using rule 33 (literal -> INTEGER .)
    )               reduce using rule 33 (literal -> INTEGER .)
    ;               reduce using rule 33 (literal -> INTEGER .)


state 21

    (9) if_statement -> IF ( . expr ) { block }
    (10) if_statement -> IF ( . expr ) { block } ELSE { block }
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 38
    literal                        shift and go to state 14

state 22

    (14) assign_statement -> IDENTIFIER ASSIGN . expr ;
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 39
    literal                        shift and go to state 14

state 23

    (12) var_declaration -> TYPE IDENTIFIER . ;
    (13) var_declaration -> TYPE IDENTIFIER . ASSIGN expr ;
    ;               shift and go to state 40
    ASSIGN          shift and go to state 41


state 24

    (11) while_statement -> WHILE expr { . block }
    (1) block -> .
    (2) block -> . statements
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . while_statement
    (6) statement -> . if_statement
    (7) statement -> . assign_statement
    (8) statement -> . var_declaration
    (11) while_statement -> . WHILE expr { block }
    (9) if_statement -> . IF ( expr ) { block }
    (10) if_statement -> . IF ( expr ) { block } ELSE { block }
    (14) assign_statement -> . IDENTIFIER ASSIGN expr ;
    (12) var_declaration -> . TYPE IDENTIFIER ;
    (13) var_declaration -> . TYPE IDENTIFIER ASSIGN expr ;
    }               reduce using rule 1 (block -> .)
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    IDENTIFIER      shift and go to state 10
    TYPE            shift and go to state 11

    block                          shift and go to state 42
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    while_statement                shift and go to state 4
    if_statement                   shift and go to state 5
    assign_statement               shift and go to state 6
    var_declaration                shift and go to state 7

state 25

    (18) expr -> expr OR . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 43
    literal                        shift and go to state 14

state 26

    (19) expr -> expr AND . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 44
    literal                        shift and go to state 14

state 27

    (20) expr -> expr NEQUAL . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 45
    literal                        shift and go to state 14

state 28

    (21) expr -> expr EQUAL . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 46
    literal                        shift and go to state 14

state 29

    (22) expr -> expr GEQUAL . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 47
    literal                        shift and go to state 14

state 30

    (23) expr -> expr GREATERT . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 48
    literal                        shift and go to state 14

state 31

    (24) expr -> expr LEQUAL . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 49
    literal                        shift and go to state 14

state 32

    (25) expr -> expr LESST . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 50
    literal                        shift and go to state 14

state 33

    (26) expr -> expr DIVIDE . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 51
    literal                        shift and go to state 14

state 34

    (27) expr -> expr TIMES . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 52
    literal                        shift and go to state 14

state 35

    (28) expr -> expr MINUS . expr
    (15) expr -> . literal
    (16) expr -> . IDENTIFIER
    (17) expr -> . ( expr )
    (18) expr -> . expr OR expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr NEQUAL expr
    (21) expr -> . expr EQUAL expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr GREATERT expr
    (24) expr -> . expr LEQUAL expr
    (25) expr -> . expr LESST expr
    (26) expr -> . expr DIVIDE expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr PLUS expr
    (30) literal -> . BOOLEAN
    (31) literal -> . STRING
    (32) literal -> . FLOAT
    (33) literal -> . INTEGER
    IDENTIFIER      shift and go to state 15
    (               shift and go to state 16
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 53
    literal                        shift and go to state 14

state 36
